Bug 89873 - UI: some dialog windows not being painted
Summary: UI: some dialog windows not being painted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: Other All
: highest blocker
Assignee: Not Assigned
URL:
Whiteboard: repro:Windows32 repro:WindowsX64 repr...
Keywords: bibisected, regression
: 89881 (view as bug list)
Depends on:
Blocks: mab5.0
  Show dependency treegraph
 
Reported: 2015-03-07 10:08 UTC by tommy27
Modified: 2015-12-17 08:48 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (35.72 KB, image/png)
2015-03-07 10:08 UTC, tommy27
Details
screenshot (42.04 KB, image/png)
2015-03-07 10:35 UTC, GerardF
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tommy27 2015-03-07 10:08:36 UTC
Created attachment 113946 [details]
screenshot

tested under Win8x64 using Version: 4.5.0.0.alpha0+

Build ID: 333f8a76341f5b4921e89012d133007503e49612
TinderBox: Win-x86@42, Branch:master, Time: 2015-03-07_00:28:52
Locale: it_IT

any dialog window you open (ie. File/Properties, Tools/Autocorrect Options) looks completely broken like you can see in my screenshot

it seems the windows doesn't show up the dialog text but instead shows the document background beneath it
Comment 1 tommy27 2015-03-07 10:09:41 UTC
if confirmed by others this has to be added to the mab4.5 list
Comment 2 tommy27 2015-03-07 10:15:37 UTC
(In reply to tommy27 from comment #0)
>....
> 
> any dialog window you open (ie. File/Properties, Tools/Autocorrect Options)
> looks completely broken like you can see in my screenshot

well, not every dialog is affected...
for example Tools/customize, Tools/Options, Help/about look normal
Comment 3 GerardF 2015-03-07 10:28:33 UTC
Can not confirm with
Version: 4.5.0.0.alpha0+
Build ID: e80d1cfcb75659eddfd7a29e45d9e6ee935668ac
TinderBox: Win-x86@39, Branch:master, Time: 2015-02-27_02:25:05
Locale: fr_FR
on Windows Vista.
Comment 4 GerardF 2015-03-07 10:35:46 UTC
Created attachment 113947 [details]
screenshot

Reply too quickly...
I've tried with Calc.
Have again atry with Writer and now I can reproduce *partially*.
Windows are showned correctly excepted when having checkboxes.
Text with checkbox is not lisible (black on black background).
Comment 5 tommy27 2015-03-07 10:50:08 UTC
I uninstalled the build were I reported the bug originally
Build ID: 333f8a76341f5b4921e89012d133007503e49612
TinderBox: Win-x86@42, Branch:master, Time: 2015-03-07_00:28:52
Locale: it_IT


and then installed this slightly older build from another tinderbox
Build ID: cda4c8edc21a92422e3479909d8082cddf16bcae
TinderBox: Win-x86@39, Branch:master, Time: 2015-03-06_03:02:28
Locale: it_IT


now I see the same issue as you in the autocorrect option dialog box.
the other looks fine

anyway this supports the fact that the dialogs were already broken on 2015-03-06 and some code change made the situation getting worse in 2015-03-07


I set status NEW and I edit summary notes.
Comment 6 V Stuart Foote 2015-03-07 16:25:47 UTC
Confirming on Windows 7 sp1, 64-bit en-US with nVidia GTX 260 and 9.18.13.2018 driver on

Version: 4.5.0.0.alpha0+
Build ID: 333f8a76341f5b4921e89012d133007503e49612
TinderBox: Win-x86@42, Branch:master, Time: 2015-03-07_00:28:52
Locale: en_US

STR:

1. Launch with new/clean user profile
2. Open Writer
3. Standard toolbar -> Spelling and Grammar button, or <F7>

Observed -- Dialog frame and alert box both empty not drawn
Comment 7 V Stuart Foote 2015-03-07 17:57:45 UTC
tdf#89873 Bisect results

Good
Version: 4.5.0.0.alpha0+
Build ID: c6223049651d6607101ef04271773e478a429c8a
TinderBox: Win-x86@39, Branch:master, Time: 2015-03-04_00:54:12
Locale: en_US

Good
Version: 4.5.0.0.alpha0+
Build ID: 78be86343bc6ee91fffe3b710f7db3a90f1b23ae
TinderBox: Win-x86@39, Branch:master, Time: 2015-03-05_04:01:11
Locale: en_US

Good
Version: 4.5.0.0.alpha0+
Build ID: cda4c8edc21a92422e3479909d8082cddf16bcae
TinderBox: Win-x86@39, Branch:master, Time: 2015-03-06_03:02:28
Locale: en_US

First bad
Version: 4.5.0.0.alpha0+
Build ID: 8ea45048b83e685090484c959f642118cfebef6c
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2015-03-06_23:24:09
Locale: en_US

Bad
Version: 4.5.0.0.alpha0+
Build ID: 333f8a76341f5b4921e89012d133007503e49612
TinderBox: Win-x86@42, Branch:master, Time: 2015-03-07_00:28:52
Locale: en_US

In the 56 commits in range: http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=cda4c8edc21a92422e3479909d8082cddf16bcae..8ea45048b83e685090484c959f642118cfebef6c
Comment 8 Julien Nabet 2015-03-07 18:51:23 UTC
*** Bug 89881 has been marked as a duplicate of this bug. ***
Comment 9 V Stuart Foote 2015-03-07 19:23:57 UTC
This does not appear to affect builds other than Windows

not reproducible on Fedora 21 with LXDE with
Version: 4.5.0.0.alpha0+
Build ID: 333f8a76341f5b4921e89012d133007503e49612
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-03-07_01:08:32
Locale: en_US
Comment 10 V Stuart Foote 2015-03-07 19:36:56 UTC
also present on x64 Windows builds

Version: 4.5.0.0.alpha0+ (x64)
Build ID: 8ea45048b83e685090484c959f642118cfebef6c
TinderBox: Win-x86_64@42, Branch:master, Time: 2015-03-06_22:59:05
Locale: en_US
Comment 11 Joel Madero 2015-03-08 16:55:02 UTC
MAB should always be highest - setting as such now
Comment 12 V Stuart Foote 2015-03-09 14:41:18 UTC
Issue in comment 4 comment 5 are different issue as in bug 89134 - UI: black background on Options - Language Settings - Writing Aids
Comment 13 Matthew Francis 2015-03-10 09:38:26 UTC
Despite comment 9, I can reproduce this on Linux (Ubuntu 14.04, lxde) with e.g. the Calc "Find & Replace" dialog.

First bad commit in the 45 dbgutil bibisect tree is
2015-03-07: source-hash-333f8a76341f5b4921e89012d133007503e49612

which tallies with comment 7 in terms of the timescale of when it was introduced


Adjusting bug metadata to suit.
Comment 14 V Stuart Foote 2015-03-10 13:17:51 UTC
(In reply to Matthew Francis from comment #13)
> Despite comment 9, I can reproduce this on Linux (Ubuntu 14.04, lxde) with
> e.g. the Calc "Find & Replace" dialog.

Yes confirming Linux (Fedora 21 (32-bit), w/LXDE) is also affected, the "Find & Replace" <Ctrl+H> in Writer or Calc exhibits the isssue.  

Odd that the STR using "Spelling and Grammar" <F7> shows correctly on LXDE Linux, but only for Writer. But with Calc "Spelling" <F7> is also not painting dialog correctly. Guess using "Find & Replace" would have been the better STR.
Comment 15 Tobias Madl 2015-03-12 07:17:29 UTC
The "Find and Replace" window should be fixed. Currently working on black background at Autocorrect.
Comment 16 Matthew Francis 2015-03-17 03:50:26 UTC
Still occurs on master in Writer with "Insert - Indexes and Tables - Indexes and Tables..."

"File - Print..." also isn't painted initially, although it sorts itself out after a while
Comment 17 Juergen Funk 2015-03-31 06:53:29 UTC
To Commit 15

The bug in TreeLists with black background is NOT from scheduler. It is from patch 148e489e33a34c6345326c9beaf248ac91f8cd01. 
Lot of dialogs not set the background, that was the problem. My fix set the color to the default background, in my case under windows is the color grey, and under linux it is white, and both work now. 

In following dialog found, not completely
- Autocorrect, tab options and tab localized options
- Spelling, button options 
- Options, Language Settings/Writing Aids


Patch: https://gerrit.libreoffice.org/#/c/15071/
Comment 18 Commit Notification 2015-03-31 12:40:45 UTC
Juergen Funk committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eb61e1c00365337cde3aff45b5a9f362951abd62

tdf#89873 UI: some dialog windows not being painted

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Katarina Behrens (Inactive) 2015-04-01 08:53:48 UTC
*** Bug 89134 has been marked as a duplicate of this bug. ***
Comment 20 V Stuart Foote 2015-04-01 12:54:03 UTC
On Windows 7 sp1, 64-bit en-US with

Version: 4.5.0.0.alpha0+ (x64)
Build ID: 2302e9eb8a161abaf5899288b4e1c689f5a1ff07
TinderBox: Win-x86_64@42, Branch:master, Time: 2015-03-31_23:15:41
Locale: en_US

Verified, both types of issue are now correct.
Comment 21 Alex Thurgood 2015-04-07 13:45:20 UTC
Seems like this bug made it into 4422 too - see bug 90437

Can the fix be backported to 4.4 ?
Comment 22 Juergen Funk 2015-04-08 11:46:11 UTC
To Comment 21 

The last fix is only for the screenshot (42.04 KB) in this case the background was not set for the list-box-entries. 
The trouble is coming with this patch: http://cgit.freedesktop.org/libreoffice/core/commit/?id=148e489e33a34c6345326c9beaf248ac91f8cd01
and that was only in LO 4.5

In your case it look like a graphic problem, and nothing to do witch this.
Comment 23 Matthew Francis 2015-04-08 12:03:47 UTC
@Juergen: Edit – AutoText... appears to still suffer from a lack of background
Comment 24 Robinson Tryon (qubit) 2015-12-17 08:48:05 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]