tdf#89873 UI: some dialog windows not being painted

The bug in TreeLists with black background is NOT from scheduler.
It is from patch 148e489e33a34c6345326c9beaf248ac91f8cd01
Lot of dialogs not set the background, that was the problem.
My fix set the backgound to the default background.

Change-Id: I0f07bf54131aeb177bcf150e6854203c34b6b972