svtools/source/contnr/treelistentry.cxx
@@ -57,6 +57,7 @@ SvTreeListEntry::SvTreeListEntry()
     , bIsMarked(false)
     , pUserData(NULL)
     , nEntryFlags(0)
+    , maBackColor(Application::GetSettings().GetStyleSettings().GetWindowColor())
 {
 }
 
@@ -67,6 +68,7 @@ SvTreeListEntry::SvTreeListEntry(const SvTreeListEntry& r)
     , bIsMarked(r.bIsMarked)
     , pUserData(r.pUserData)
     , nEntryFlags(r.nEntryFlags)
+    , maBackColor(Application::GetSettings().GetStyleSettings().GetWindowColor())
 {
     SvTreeListEntries::const_iterator it = r.maChildren.begin(), itEnd = r.maChildren.end();
     for (; it != itEnd; ++it)
